# sphlib

./: CMakeLists.txt
c/: Makefile.unix  bmw.c  gost.c  ripemd.c  sph_gost.c  sph_gost.h  sph_luffa.h  sph_types.h
